update issue avatar invisible between 1150px and 767px

--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -99,7 +99,7 @@ article {
 
 .header {
     box-shadow: 2px 4px 8px rgba(0, 0, 0, .2);
-    z-index: 20;
+    z-index: 21;
     font-weight: 400;
     font-size: 20px;
     line-height: 120%;
